CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/sfrosit_t_child_sup_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_child_sup_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_child_sup_hist</externalName>
    <label>Child Support History</label>
    <pluralLabel>Child Support History</pluralLabel>
</CustomObject>