CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/cde_source_vrfd_coda__c.field-meta.xml
<CustomField>
    <fullName>cde_source_vrfd_coda__c</fullName>
    <description>cde_source_vrfd_coda</description>
    <externalDeveloperName>cde_source_vrfd_coda</externalDeveloperName>
    <label>CODA Verified Source Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>