CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/dte_begin_cs_coop__c.field-meta.xml
<CustomField>
    <fullName>dte_begin_cs_coop__c</fullName>
    <description>dte_begin_cs_coop</description>
    <externalDeveloperName>dte_begin_cs_coop</externalDeveloperName>
    <label>Child Support COOP Begin Date</label>
    <type>Date</type>
</CustomField>