CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/dte_begin_gdc__c.field-meta.xml
<CustomField>
    <fullName>dte_begin_gdc__c</fullName>
    <description>dte_begin_gdc</description>
    <externalDeveloperName>dte_begin_gdc</externalDeveloperName>
    <label>Good Cause Begin Date</label>
    <type>Date</type>
</CustomField>