CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/dte_birth_cust_non__c.field-meta.xml
<CustomField>
    <fullName>dte_birth_cust_non__c</fullName>
    <description>dte_birth_cust_non</description>
    <externalDeveloperName>dte_birth_cust_non</externalDeveloperName>
    <label>Brith Date</label>
    <type>Date</type>
</CustomField>