CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/dte_change_rptd__c.field-meta.xml
<CustomField>
    <fullName>dte_change_rptd__c</fullName>
    <description>dte_change_rptd</description>
    <externalDeveloperName>dte_change_rptd</externalDeveloperName>
    <label>Reported Change Date</label>
    <type>DateTime</type>
</CustomField>