CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/idn_child_sup__c.field-meta.xml
<CustomField>
    <fullName>idn_child_sup__c</fullName>
    <description>idn_child_sup</description>
    <externalDeveloperName>idn_child_sup</externalDeveloperName>
    <label>Child Support ID</label>
    <length>50</length>
    <referenceTargetField>T_CHILD_SUP__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_CHILD_SUP__c</referenceTo>
    <relationshipLabel>Child Support Enforcement Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_child_sup_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>