CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/idn_child_sup_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_child_sup_hist__c</fullName>
    <description>idn_child_sup_hist</description>
    <externalDeveloperName>idn_child_sup_hist</externalDeveloperName>
    <label>Child Support ID History</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>