CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/idn_state_cust_non__c.field-meta.xml
<CustomField>
    <fullName>idn_state_cust_non__c</fullName>
    <description>idn_state_cust_non</description>
    <externalDeveloperName>idn_state_cust_non</externalDeveloperName>
    <label>State ID of Non-Custodial</label>
    <length>9</length>
    <type>Text</type>
</CustomField>