CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/ind_case_open__c.field-meta.xml
<CustomField>
    <fullName>ind_case_open__c</fullName>
    <description>ind_case_open</description>
    <externalDeveloperName>ind_case_open</externalDeveloperName>
    <label>Case Open</label>
    <length>1</length>
    <type>Text</type>
</CustomField>