CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/ind_coop_parent__c.field-meta.xml
<CustomField>
    <fullName>ind_coop_parent__c</fullName>
    <description>ind_coop_parent</description>
    <externalDeveloperName>ind_coop_parent</externalDeveloperName>
    <label>COOP Parent ID</label>
    <length>1</length>
    <type>Text</type>
</CustomField>