CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/ind_gdc__c.field-meta.xml
<CustomField>
    <fullName>ind_gdc__c</fullName>
    <description>ind_gdc</description>
    <externalDeveloperName>ind_gdc</externalDeveloperName>
    <label>Good Cause ID</label>
    <length>1</length>
    <type>Text</type>
</CustomField>