CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/ind_rcv_sup_child__c.field-meta.xml
<CustomField>
    <fullName>ind_rcv_sup_child__c</fullName>
    <description>ind_rcv_sup_child</description>
    <externalDeveloperName>ind_rcv_sup_child</externalDeveloperName>
    <label>Receievd Child Support</label>
    <length>1</length>
    <type>Text</type>
</CustomField>