CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/ind_visitn__c.field-meta.xml
<CustomField>
    <fullName>ind_visitn__c</fullName>
    <description>ind_visitn</description>
    <externalDeveloperName>ind_visitn</externalDeveloperName>
    <label>Visitation Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>