CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/ind_vrfyd__c.field-meta.xml
<CustomField>
    <fullName>ind_vrfyd__c</fullName>
    <description>ind_vrfyd</description>
    <externalDeveloperName>ind_vrfyd</externalDeveloperName>
    <label>Verified Indicator</label>
    <length>3</length>
    <type>Text</type>
</CustomField>