CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/nam_first_cust_non__c.field-meta.xml
<CustomField>
    <fullName>nam_first_cust_non__c</fullName>
    <description>nam_first_cust_non</description>
    <externalDeveloperName>nam_first_cust_non</externalDeveloperName>
    <label>First Name of Non-Custodial Parent</label>
    <length>32</length>
    <type>Text</type>
</CustomField>