CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/nam_mi_cust_non__c.field-meta.xml
<CustomField>
    <fullName>nam_mi_cust_non__c</fullName>
    <description>nam_mi_cust_non</description>
    <externalDeveloperName>nam_mi_cust_non</externalDeveloperName>
    <label>Middle Name of Non-Custodial Parent</label>
    <length>1</length>
    <type>Text</type>
</CustomField>