CHATS_SIT/force-app/main/default/objects/sfrosit_t_child_sup_hist__x/fields/nbr_ssn_cust_non__c.field-meta.xml
<CustomField>
    <fullName>nbr_ssn_cust_non__c</fullName>
    <description>nbr_ssn_cust_non</description>
    <externalDeveloperName>nbr_ssn_cust_non</externalDeveloperName>
    <label>SSN of Non-Custodial Parent</label>
    <length>9</length>
    <type>Text</type>
</CustomField>